<resources>
    <string name="app_name">Cash Register</string>
    <string name="product_type">Product Type</string>
    <string name="manager">MANAGER</string>
    <string name="total_amount">Total Amount</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="buy">BUY</string>
    <string name="clear">C</string>
    <string name="add_quantity">Add Quantity</string>
    <string name="enter_new_quantity">Enter New Quantity</string>
    <string name="name">Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="title_activity_manager">Manager</string>
    <string name="history">HISTORY</string>
    <string name="restock">RESTOCK</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
</resources>