<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/topLeftTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="@dimen/textSize"
        android:textAlignment="textStart"
        android:layout_margin="@dimen/margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/topRightTextView"
        />

    <TextView
        android:id="@+id/topRightTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textAlignment="textEnd"
        android:textSize="@dimen/textSize"
        android:layout_margin="@dimen/margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/topLeftTextView"
        />

    <TextView
        android:id="@+id/bottomLeftTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/price"
        android:textAlignment="textStart"
        android:textSize="@dimen/textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topLeftTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>