<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RestockActivity">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2"
        />

    <EditText
        android:id="@+id/enterNewQuantityEditText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:hint="@string/enter_new_quantity"
        android:inputType="numberSigned"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal30"
        />

    <Button
        android:id="@+id/buttonOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:textSize="@dimen/textSize"
        android:background="@drawable/rectangular_button"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonCancel"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal30"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal50"
        />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangular_button"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonOk"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal30"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal50"
        />
    
    <ListView
        android:id="@+id/listViewRestock"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>